almost done slides

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Slides &amp; source code available on [<svg aria-label="GitHub" role="img" viewB
 ---
 ### <svg aria-label="Question" role="img" viewBox="0 0 384 512" style="height:1em;width:0.75em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>Question</title><path d="M202.021 0C122.202 0 70.503 32.703 29.914 91.026c-7.363 10.58-5.093 25.086 5.178 32.874l43.138 32.709c10.373 7.865 25.132 6.026 33.253-4.148 25.049-31.381 43.63-49.449 82.757-49.449 30.764 0 68.816 19.799 68.816 49.631 0 22.552-18.617 34.134-48.993 51.164-35.423 19.86-82.299 44.576-82.299 106.405V320c0 13.255 10.745 24 24 24h72.471c13.255 0 24-10.745 24-24v-5.773c0-42.86 125.268-44.645 125.268-160.627C377.504 66.256 286.902 0 202.021 0zM192 373.459c-38.196 0-69.271 31.075-69.271 69.271 0 38.195 31.075 69.27 69.271 69.27s69.271-31.075 69.271-69.271-31.075-69.27-69.271-69.27z"/></svg> Technical interview questions/tasks can take *many* forms
 
-Some very general examples: 
+&lt;span style = 'font-size: 90%;'&gt;Some very general examples:&lt;/span&gt; 
 
 &lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Can you explain the difference between statistical test A and statistical test B?&lt;/span&gt;
 
@@ -91,16 +91,31 @@ Some very general examples:
 
 &lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Here is a data set. Using your preferred programming language, please answer question X.&lt;/span&gt;
 
-The type, length, and difficulty of technical questions typically varies with the job level (e.g. junior vs. senior-level data scientist)
+&lt;br&gt;
+
+--
+
+&lt;span style = 'font-size: 90%;'&gt;The type, length, and difficulty of technical questions may vary with:&lt;/span&gt; 
+
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> job classification (e.g. junior vs. senior-level data scientist)&lt;/span&gt;   
+
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> sector (e.g. academia vs. industry)&lt;/span&gt;  
+
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> stage of the interview process (e.g. you may have an entire interview stage dedicated to showcasing your technical skills via a coding/analytical challenge)&lt;/span&gt;
 
 ---
 ### <svg aria-label="Book Reader" role="img" viewBox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>Book Reader</title><path d="M352 96c0-53.02-42.98-96-96-96s-96 42.98-96 96 42.98 96 96 96 96-42.98 96-96zM233.59 241.1c-59.33-36.32-155.43-46.3-203.79-49.05C13.55 191.13 0 203.51 0 219.14v222.8c0 14.33 11.59 26.28 26.49 27.05 43.66 2.29 131.99 10.68 193.04 41.43 9.37 4.72 20.48-1.71 20.48-11.87V252.56c-.01-4.67-2.32-8.95-6.42-11.46zm248.61-49.05c-48.35 2.74-144.46 12.73-203.78 49.05-4.1 2.51-6.41 6.96-6.41 11.63v245.79c0 10.19 11.14 16.63 20.54 11.9 61.04-30.72 149.32-39.11 192.97-41.4 14.9-.78 26.49-12.73 26.49-27.06V219.14c-.01-15.63-13.56-28.01-29.81-27.09z"/></svg> There are ways to prepare:
 
-&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Analyze the job posting and organization's website&lt;/span&gt;
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Research the role (e.g. analyze the job posting and organization's website)&lt;/span&gt;
 
-* &lt;span style = 'font-size: 80%;'&gt;identify what type of data science work/analyses you might be embarking on should you land/accept the job&lt;/span&gt;
+* &lt;span style = 'font-size: 70%;'&gt;identify what type of data science work/analyses you might be embarking on should you land/accept the job&lt;/span&gt;
+* &lt;span style = 'font-size: 70%;'&gt;review the types of tools, methodologies, and approaches you might use to address the work/problems outlined in the employer's materials&lt;/span&gt;
+* &lt;span style = 'font-size: 70%;'&gt;identify any areas you may not have direct experience in -- have an understanding of the landscape of tools available for working in that space and be able to reference a few (but be honest about your experience)&lt;/span&gt;
 
-&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg>&lt;/span&gt;
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Be able to talk about your project(s)&lt;/span&gt;
+
+* &lt;span style = 'font-size: 70%;'&gt;Some technical questions or tasks are more open-ended (e.g. see Example 1 on [slide 12](https://ucsb-meds.github.io/technical-interviews/#7)). Be prepared to talk clearly and succinctly about your goals and contributions to a project.&lt;/span&gt;
+
 
 &lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg>&lt;/span&gt;
 
@@ -123,7 +138,7 @@ class: inverse, middle, center
 
 ### <svg aria-label="Tree" role="img" viewBox="0 0 384 512" style="height:1em;width:0.75em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#93C6C2;overflow:visible;position:relative;"><title>Tree</title><path d="M378.31 378.49L298.42 288h30.63c9.01 0 16.98-5 20.78-13.06 3.8-8.04 2.55-17.26-3.28-24.05L268.42 160h28.89c9.1 0 17.3-5.35 20.86-13.61 3.52-8.13 1.86-17.59-4.24-24.08L203.66 4.83c-6.03-6.45-17.28-6.45-23.32 0L70.06 122.31c-6.1 6.49-7.75 15.95-4.24 24.08C69.38 154.65 77.59 160 86.69 160h28.89l-78.14 90.91c-5.81 6.78-7.06 15.99-3.27 24.04C37.97 283 45.93 288 54.95 288h30.63L5.69 378.49c-6 6.79-7.36 16.09-3.56 24.26 3.75 8.05 12 13.25 21.01 13.25H160v24.45l-30.29 48.4c-5.32 10.64 2.42 23.16 14.31 23.16h95.96c11.89 0 19.63-12.52 14.31-23.16L224 440.45V416h136.86c9.01 0 17.26-5.2 21.01-13.25 3.8-8.17 2.44-17.47-3.56-24.26z"/></svg> Example 3: Data Specialist @ Bureau of Land Management
 
-Candidates are asked a series of interview questions, some of which require discussion about experience using particular data science tools and methodologies. Find all the interview questions [here](https://docs.google.com/document/d/1uX3Jg8iDtmceKCslmjk9nMrhhL4jRbYE-fKfdcwxCiQ/edit?usp=sharing).
+Candidates are asked a series of interview questions, some of which required discussion about experience using particular data science tools and methodologies. Find all the interview questions [here](https://docs.google.com/document/d/1uX3Jg8iDtmceKCslmjk9nMrhhL4jRbYE-fKfdcwxCiQ/edit?usp=sharing).
 
 ---
 class: inverse, middle, center
@@ -133,12 +148,47 @@ class: inverse, middle, center
 Candidates were given 48 hours to complete [this technical exercise](https://docs.google.com/document/d/1XMMUwnq5DblgbqLlh6C9_kPMVeLnqNGNz_Wk4RrGPps/edit?usp=sharing).
 
 ---
-### Closing thoughts:
+### Some closing thoughts:
 
-&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg>&lt;/span&gt;
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Save your job postings (as pdfs, not just the URL) and any associated technical questions/challenges you may get during the interview process -- this not only helps you ensure that you highlight the skills they want see in a candidate but also review and practice past problems&lt;/span&gt;
+
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> You can learn a lot from the experiences of others (i.e. talk with one another!)&lt;/span&gt;
 
 &lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Technical questions are often just one part of the overall interview process -- don't ignore the other interview skills you've learned!&lt;/span&gt;
 
+---
+class: center, middle
+
+## Now go crush those interviews!
+&lt;img src="media/michael_scott.gif" width="50%" /&gt;
+
+Slides created via the R packages:
+
+[**xaringan**](https://github.com/yihui/xaringan)&lt;br&gt;
+[**gadenbuie/xaringanthemer**](https://github.com/gadenbuie/xaringanthemer)
+
+&lt;span style = 'font-size: 75%;'&gt;*If you see mistakes or want to suggest changes, please create an [issue](https://github.com/UCSB-MEDS/technical-interviews/issues) on the source repository.*&lt;/span&gt;
+
+---
+class: inverse, middle, center
+
+## <svg aria-label="Brain" role="img" viewBox="0 0 576 512" style="height:1em;width:1.12em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#93C6C2;overflow:visible;position:relative;"><title>Brain</title><path d="M208 0c-29.9 0-54.7 20.5-61.8 48.2-.8 0-1.4-.2-2.2-.2-35.3 0-64 28.7-64 64 0 4.8.6 9.5 1.7 14C52.5 138 32 166.6 32 200c0 12.6 3.2 24.3 8.3 34.9C16.3 248.7 0 274.3 0 304c0 33.3 20.4 61.9 49.4 73.9-.9 4.6-1.4 9.3-1.4 14.1 0 39.8 32.2 72 72 72 4.1 0 8.1-.5 12-1.2 9.6 28.5 36.2 49.2 68 49.2 39.8 0 72-32.2 72-72V64c0-35.3-28.7-64-64-64zm368 304c0-29.7-16.3-55.3-40.3-69.1 5.2-10.6 8.3-22.3 8.3-34.9 0-33.4-20.5-62-49.7-74 1-4.5 1.7-9.2 1.7-14 0-35.3-28.7-64-64-64-.8 0-1.5.2-2.2.2C422.7 20.5 397.9 0 368 0c-35.3 0-64 28.6-64 64v376c0 39.8 32.2 72 72 72 31.8 0 58.4-20.7 68-49.2 3.9.7 7.9 1.2 12 1.2 39.8 0 72-32.2 72-72 0-4.8-.5-9.5-1.4-14.1 29-12 49.4-40.6 49.4-73.9z"/></svg> Practice questions
+
+Find a partner and practice responding to these technical (albeit silly) questions. A primary goal is to gain confidence in talking through your thought processes out loud as you attempt to answer these questions. You should feel free to ask explicit, clarifying questions (like you might do in an interview). Pick one out of a hat at random to keep things interesting :)
+
+---
+### Practice questions
+
+&lt;span style = 'font-size: 80%;'&gt;**1.** How many tennis balls can you fit inside the NCEAS first floor classroom?&lt;/span&gt;  
+&lt;span style = 'font-size: 80%;'&gt;**2.** How long would it take for you to walk across the Santa Barbara Channel from Ventura Harbor to Scorpion Anchorage.&lt;/span&gt;  
+&lt;span style = 'font-size: 80%;'&gt;**3.** Explain, in detail, the process of making a cup of coffee.&lt;/span&gt;  
+&lt;span style = 'font-size: 80%;'&gt;**4.** How many licks does it take to get to the center of a Tootsie Pop?&lt;/span&gt;  
+&lt;span style = 'font-size: 80%;'&gt;**5.** You have 8 pennies and a scale. One penny weighs more than the others. Determine which penny weighs more in three or fewer steps. &lt;/span&gt;  
+&lt;span style = 'font-size: 80%;'&gt;**6.** Given a number 1 to 1000, what is the minimum number of guesses you would need to find that particular number if you are only given the hints "higher" or "lower" after each of your guesses.&lt;/span&gt;  
+&lt;span style = 'font-size: 80%;'&gt;**7.** How would you describe the taste of a cheeseburger (alternatively, substitute a different food here)?&lt;/span&gt;  
+&lt;span style = 'font-size: 80%;'&gt;**8.** How many keystrokes does it take to wear the letters off your keyboard?&lt;/span&gt;  
+&lt;span style = 'font-size: 80%;'&gt;**9.** Why don't whales have tails in the same direction as those of sharks?&lt;/span&gt;  
+&lt;span style = 'font-size: 80%;'&gt;**10.** ?&lt;/span&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
