complete slides (for now)

--- a/index.html
+++ b/index.html
@@ -112,12 +112,20 @@ Slides &amp; source code available on [<svg aria-label="GitHub" role="img" viewB
 * &lt;span style = 'font-size: 70%;'&gt;review the types of tools, methodologies, and approaches you might use to address the work/problems outlined in the employer's materials&lt;/span&gt;
 * &lt;span style = 'font-size: 70%;'&gt;identify any areas you may not have direct experience in -- have an understanding of the landscape of tools available for working in that space and be able to reference a few (but be honest about your experience)&lt;/span&gt;
 
+--
+
 &lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Be able to talk about your project(s)&lt;/span&gt;
 
 * &lt;span style = 'font-size: 70%;'&gt;Some technical questions or tasks are more open-ended (e.g. see Example 1 on [slide 12](https://ucsb-meds.github.io/technical-interviews/#7)). Be prepared to talk clearly and succinctly about your goals and contributions to a project.&lt;/span&gt;
 
+--
 
-&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg>&lt;/span&gt;
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Practice coding challenges -- there are a number of online resources/platforms including:&lt;/span&gt;
+
+* &lt;span style = 'font-size: 70%;'&gt;[Kaggle competitions](https://www.kaggle.com/competitions), which are designed to provide challenges for competitors at all different stages of their machine learning careers.&lt;/span&gt; 
+* &lt;span style = 'font-size: 70%;'&gt;[stratascratch](https://www.stratascratch.com/), a data science platform with &gt;1000 real interview questions (new questions added each month)&lt;/span&gt;
+* &lt;span style = 'font-size: 70%;'&gt;[Confetti AI](https://www.confetti.ai/), a question bank covering core ideas in statistics, data science, and full-stack machine learning (new questions added each week)&lt;/span&gt;
+* &lt;span style = 'font-size: 70%;'&gt;[LeetCode](https://leetcode.com/), a platform for enhancing your skills, expanding your knowledge and preparing for technical interviews (primarily geared towards software developers, rather than data scientists)&lt;/span&gt;
 
 ---
 class: inverse, middle, center
@@ -150,9 +158,17 @@ Candidates were given 48 hours to complete [this technical exercise](https://doc
 ---
 ### Some closing thoughts:
 
-&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Save your job postings (as pdfs, not just the URL) and any associated technical questions/challenges you may get during the interview process -- this not only helps you ensure that you highlight the skills they want see in a candidate but also review and practice past problems&lt;/span&gt;
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Remember that many technical interview questions may not even have a correct answer -- interviewers want to see you reason and create solutions. Help them understand your thought processes by breaking down complex questions and talking out loud.&lt;/span&gt;
+
+--
+
+&lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Save your job postings (as pdfs, not just the URL) and any associated technical questions/challenges you may get during the interview process -- this not only helps you ensure that you highlight the skills they want see in a candidate but also allows you to review/practice past problems&lt;/span&gt;
+
+--
 
 &lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> You can learn a lot from the experiences of others (i.e. talk with one another!)&lt;/span&gt;
+
+--
 
 &lt;span style = 'font-size: 80%;'&gt;<svg aria-label="angle-right" role="img" viewBox="0 0 256 512" style="height:1em;width:0.5em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#05859B;overflow:visible;position:relative;"><title>angle-right</title><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"/></svg> Technical questions are often just one part of the overall interview process -- don't ignore the other interview skills you've learned!&lt;/span&gt;
 
@@ -174,21 +190,34 @@ class: inverse, middle, center
 
 ## <svg aria-label="Brain" role="img" viewBox="0 0 576 512" style="height:1em;width:1.12em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#93C6C2;overflow:visible;position:relative;"><title>Brain</title><path d="M208 0c-29.9 0-54.7 20.5-61.8 48.2-.8 0-1.4-.2-2.2-.2-35.3 0-64 28.7-64 64 0 4.8.6 9.5 1.7 14C52.5 138 32 166.6 32 200c0 12.6 3.2 24.3 8.3 34.9C16.3 248.7 0 274.3 0 304c0 33.3 20.4 61.9 49.4 73.9-.9 4.6-1.4 9.3-1.4 14.1 0 39.8 32.2 72 72 72 4.1 0 8.1-.5 12-1.2 9.6 28.5 36.2 49.2 68 49.2 39.8 0 72-32.2 72-72V64c0-35.3-28.7-64-64-64zm368 304c0-29.7-16.3-55.3-40.3-69.1 5.2-10.6 8.3-22.3 8.3-34.9 0-33.4-20.5-62-49.7-74 1-4.5 1.7-9.2 1.7-14 0-35.3-28.7-64-64-64-.8 0-1.5.2-2.2.2C422.7 20.5 397.9 0 368 0c-35.3 0-64 28.6-64 64v376c0 39.8 32.2 72 72 72 31.8 0 58.4-20.7 68-49.2 3.9.7 7.9 1.2 12 1.2 39.8 0 72-32.2 72-72 0-4.8-.5-9.5-1.4-14.1 29-12 49.4-40.6 49.4-73.9z"/></svg> Practice questions
 
-Find a partner and practice responding to these technical (albeit silly) questions. A primary goal is to gain confidence in talking through your thought processes out loud as you attempt to answer these questions. You should feel free to ask explicit, clarifying questions (like you might do in an interview). Pick one out of a hat at random to keep things interesting :)
+Find a partner and practice responding to these technical (albeit silly) questions.  
+
+A primary goal is to gain confidence in talking through your thought processes out loud as you attempt to answer these questions. You should feel free to ask explicit, clarifying questions (like you might do in an interview).  
+
+Pick one at random to keep things interesting :)
 
 ---
 ### Practice questions
 
-&lt;span style = 'font-size: 80%;'&gt;**1.** How many tennis balls can you fit inside the NCEAS first floor classroom?&lt;/span&gt;  
-&lt;span style = 'font-size: 80%;'&gt;**2.** How long would it take for you to walk across the Santa Barbara Channel from Ventura Harbor to Scorpion Anchorage.&lt;/span&gt;  
-&lt;span style = 'font-size: 80%;'&gt;**3.** Explain, in detail, the process of making a cup of coffee.&lt;/span&gt;  
-&lt;span style = 'font-size: 80%;'&gt;**4.** How many licks does it take to get to the center of a Tootsie Pop?&lt;/span&gt;  
-&lt;span style = 'font-size: 80%;'&gt;**5.** You have 8 pennies and a scale. One penny weighs more than the others. Determine which penny weighs more in three or fewer steps. &lt;/span&gt;  
-&lt;span style = 'font-size: 80%;'&gt;**6.** Given a number 1 to 1000, what is the minimum number of guesses you would need to find that particular number if you are only given the hints "higher" or "lower" after each of your guesses.&lt;/span&gt;  
-&lt;span style = 'font-size: 80%;'&gt;**7.** How would you describe the taste of a cheeseburger (alternatively, substitute a different food here)?&lt;/span&gt;  
-&lt;span style = 'font-size: 80%;'&gt;**8.** How many keystrokes does it take to wear the letters off your keyboard?&lt;/span&gt;  
-&lt;span style = 'font-size: 80%;'&gt;**9.** Why don't whales have tails in the same direction as those of sharks?&lt;/span&gt;  
-&lt;span style = 'font-size: 80%;'&gt;**10.** ?&lt;/span&gt;
+&lt;span style = 'font-size: 80%;'&gt;The "interviewee" should try answering one of the following questions:&lt;/span&gt;
+
+&lt;span style = 'font-size: 70%;'&gt;**1.** How many tennis balls can you fit inside the NCEAS first floor classroom?&lt;/span&gt;  
+&lt;span style = 'font-size: 70%;'&gt;**2.** How long would it take for you to walk across the Santa Barbara Channel from Ventura Harbor to Scorpion Anchorage.&lt;/span&gt;  
+&lt;span style = 'font-size: 70%;'&gt;**3.** Explain, in detail, the process of making a cup of coffee.&lt;/span&gt;  
+&lt;span style = 'font-size: 70%;'&gt;**4.** How many licks does it take to get to the center of a Tootsie Pop?&lt;/span&gt;  
+&lt;span style = 'font-size: 70%;'&gt;**5.** You have 8 pennies and a scale. One penny weighs more than the others. Determine which penny weighs more in three or fewer steps. &lt;/span&gt;  
+&lt;span style = 'font-size: 70%;'&gt;**6.** Given a number 1 to 1000, what is the minimum number of guesses you would need to find that particular number if you are only given the hints "higher" or "lower" after each of your guesses.&lt;/span&gt;  
+&lt;span style = 'font-size: 70%;'&gt;**7.** How would you describe the taste of a cheeseburger (alternatively, substitute a different food here)?&lt;/span&gt;  
+&lt;span style = 'font-size: 70%;'&gt;**8.** How many keystrokes does it take to wear the letters off your keyboard?&lt;/span&gt;  
+&lt;span style = 'font-size: 70%;'&gt;**9.** Why don't whales have tails that are oriented in the same direction as those of sharks?&lt;/span&gt;  
+&lt;span style = 'font-size: 70%;'&gt;**10.** Why are doors rectangular instead of round or square?&lt;/span&gt;
+
+&lt;span style = 'font-size: 80%;'&gt;The "interviewer" should make note of the following:&lt;/span&gt;
+
+* &lt;span style = 'font-size: 70%;'&gt;Does the interviewee ask targeted follow-up questions?&lt;/span&gt;
+* &lt;span style = 'font-size: 70%;'&gt;How does the interviewee break down the question/problem?&lt;/span&gt;
+* &lt;span style = 'font-size: 70%;'&gt;Does the interviewee talk through his/her/their thought processes and reasoning *out loud*?&lt;/span&gt;
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
